# djangoCRMProj

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
src/: manage.py
src/contacts/: models.py
src/contacts/migrations/: 0001_initial.py
src/djangocrmcore/: asgi.py  settings.py  urls.py  wsgi.py
