[project]
name = "djangocrmproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "django>=5.2.8",
  "django-googler>=0.0.20",
]

[dependency-groups]
dev = [
  "pre-commit>=4.4",
]
